:bug:  Fix layout bug

--- a/packages/templates/explorer-charts/styles.css
+++ b/packages/templates/explorer-charts/styles.css
@@ -1,6 +1,4 @@
 .duk-template-explorer-charts {
-  @apply flex flex-wrap;
-
   &__map,
   &__market-data,
   &__blockchain-data {
